--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
   <!-- For font awsome icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,900|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Stylish&display=swap"
+    rel="stylesheet">
 
 </head>
 
